[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mde_troubleshooting_agent"
version = "0.1.0"
description = "A troubleshooting agent for manufacturing."
readme = "README.md"
requires-python = ">=3.9"

# --- THE FIX: Point setuptools to the 'src' directory ---
[tool.setuptools.packages.find]
where = ["src"]